Update evaluation trigger in GitHub Actions workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,4 +14,7 @@ jobs:
     steps:
       - name: Trigger Evaluation
         run: |
-          curl -H "ngrok-skip-browser-warning: true" https://d5d7ef804e70.ngrok-free.app/health
+          curl -X POST https://candis-unpimpled-victoria.ngrok-free.dev/evaluate \
+            -H "Content-Type: application/json" \
+            -H "Authorization: Bearer abc123token" \
+            -d '{"repo": "https://github.com/tenchanhe/1141WSM_Final.git"}'
