--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,20 +1,19 @@
-name: Request RAG Evaluation
+name: auto-run run.sh
 
 on:
   workflow_dispatch:
     inputs:
-      model:
-        description: "Generator model"
+      repo:
+        description: 'Repository URL to submit'
         required: true
-        default: "llama3.1"
+        default: 'https://github.com/tenchanhe/1141WSM_Final.git'
 
 jobs:
-  eval:
+  run-script:
     runs-on: ubuntu-latest
     steps:
-      - name: Trigger Evaluation
-        run: |
-          curl -X POST https://candis-unpimpled-victoria.ngrok-free.dev/evaluate \
-            -H "Content-Type: application/json" \
-            -H "Authorization: Bearer abc123token" \
-            -d '{"repo": "https://github.com/tenchanhe/1141WSM_Final.git"}'
+       - name: Submit
+         run: |
+             curl -X POST "https://towel.cs.nccu.edu.tw/wsm/submit/submit" \
+              -H "Content-Type: application/json" \
+              -d "{\"repo\": \"${{ github.event.inputs.repo }}\"}"
