--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,11 +2,6 @@ name: auto-run run.sh
 
 on:
   workflow_dispatch:
-    inputs:
-      repo:
-        description: 'Repository URL to submit'
-        required: true
-        default: 'https://github.com/tenchanhe/1141WSM_Final.git'
 
 jobs:
   run-script:
@@ -16,4 +11,4 @@ jobs:
          run: |
              curl -k -X POST "https://towel.cs.nccu.edu.tw/wsm/submit/submit" \
               -H "Content-Type: application/json" \
-              -d '{"repo\": "${{ github.event.inputs.repo }}"}'
+              -d '{"repo_url": "https://github.com/tenchanhe/1141WSM_Final.git"}'
